--- a/src/views/register.html
+++ b/src/views/register.html
@@ -1,246 +1,237 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/register.css">
 
-
-
-<!------------------------ METADATOS ------------------------>
-
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
-            <link rel="icon" href="/img/logo-mercado-liebre.svg">
-
-            <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
-
-            <link rel="stylesheet" href="/css/register.css">
-
+    <script src="https://kit.fontawesome.com/545465fad0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <title>Mercado Liebre</title>
 </head>
+
 <body>
+
     <header>
 
-
-
-<!------------------------ LOGO ------------------------>
-
-        <div class="header-log-bar">
-            <div class="logo">
-                <img src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
-            </div>
-            
-
-
-<!------------------------ BARRA DE BUSQUEDA ------------------------>
-
-            <div class="search-bar">
-                    <form class="search-form" action="/search" method="get">
-                            <label for="search-label">
-                                <input class="search-input" type="text" name="q" placeholder="Buscar...">
-                            </label>
-                        <button class="search-button" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    </form>
+        <div class="header-principal">
+            <div class="top-page">
+                <a href="/">
+                    <div class="logo-mercado-liebre">
+                        <img src="/img/logo-mercado-liebre.svg" alt="logo de mercado liebre">
+                </a>
             </div>
 
+            <nav class="barra-tareas">
+                <input class="input" type="text" placeholder="Buscar productos">
+                <button class="boton-busqueda" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </nav>
 
-
-<!------------------------ MENSAJE ------------------------>        
-            
-            <div class="menssage-card">
-                <p> <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</p>
+            <div class="header-compra">
+                <h4>
+                    <i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de credito
+                </h4>
             </div>
         </div>
-            
 
-        
-<!------------------------ NAV BAR ------------------------>
-<!--====================== OPCIONES MENÚ EXTRA ======================-->
-        
-            <nav class="nav-bar">
-                <ul class="nav-bar-menu" style="list-style: none;">
-                    <li> <a href="#">Ofertas</a> </li>
-                    <li> <a href="#">Tiendas Oficiales</a> </li>
-                    <li> <a href="#">Vender</a> </li>
-                    <li> <a href="#">Ayuda</a> </li>
-                </ul>
+        <nav class="top-nav">
+            <ul class="top-nav-li">
+                <li><a class="decoration-links" href="#">Ofertas</a></li>
+                <li><a class="decoration-links" href="#">Tiendas Oficiales</a></li>
+                <li><a class="decoration-links" href="#">Vender</a></li>
+                <li><a class="decoration-links" href="#">Ayuda</a></li>
+            </ul>
 
-<!--====================== LOG IN / SING UP ======================-->
-
-                <ul class="nav-bar-menu" style="list-style: none;">
-                    <li> <a href="/register">Créa tu cuenta</a> <i class="fa-regular fa-address-card"></i> </li>
-                    <li> <a href="/login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i> </li>
-                    <li> <a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i> </li>
-                </ul>
-                </nav>
-
-<!------------------------ MENÚ HAMBURGUESA ------------------------>
-
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
+            <ul class="top-nav-li">
+                <li><a class="decoration-links" href="/register">Creá tu cuenta </a><i
+                        class="fa-solid fa-address-card"></i>
+                </li>
+                <li><a class="decoration-links" href="/login">Ingresá </a><i class="fa-solid fa-right-to-bracket"></i>
+                </li>
+                <li><a class="decoration-links" href="#">Mis compras </a><i class="fa-solid fa-cart-shopping"></i>
+                </li>
+            </ul>
+        </nav>
         </div>
+
+        <div class="burger">
+            <i class="material-symbols-outlined">menu</i>
+        </div>
+
     </header>
 
-<!------------------------ SING UP (register) ------------------------>
+<!-- MAIN -->
 
-<form action="/">
-    <section class="form-register-section-main">
-    <div class="general-form-div">
+    <main class="register">
 
-        <div class="name-surname-form-box">
-            <input type="text" id="n-s-form" name="n&s-form" placeholder="Nombre y apellido">
-        </div>
+        <form action="/register" method="post" class="register-form">
 
-        <div class="username-form-box">
-            <input type="text" id="user-form" name="username-form" placeholder="Nombre de usuario">
-        </div>
-
-        <div class="email-form-box">
-            <input type="email" id="mail-form" name="email-form" placeholder="E-mail">
-        </div>
-
-        <div class="birthday-form-box">
-            <div class="birthday-msg">
-                <label for="" class="bday-label">Fecha de nacimiento</label>
+            <h1>Creá tu cuenta</h1>
+            <div>
+                <input type="text" name="Nombre-y-Apellido" placeholder=" Nombre y Apellido" class="inputBox" required>
             </div>
-            <input type="date" id="bday-form" name="bd-form">
-        </div>
-
-        <div class="adress-form-box">
-            <input type="text" id="adress-form" name="adress-form" placeholder="Domicilio">
-        </div>
-
-        <div class="preference-form-box">
-            <div class="preferences-msg">
-                <label for="/" class="preference-user-label">Perfil del Usuario</label>
-            </div>
-                <div class="buy-sell-form-modify">
-                    <div class="buy">
-                        <input type="checkbox" name="user-buy-form" id="buy-form">
-                        <label for="">Comprador</label>
-                    </div>
-
-                    <div class="sell">
-                        <input type="checkbox" name="user-sell-form" id="sell-form">
-                        <label for="">Vendedor</label>
-                    </div>
-                </div>
-        </div>
-
-        <div class="interest-user-form-box">
-            <div class="interest-msg">
-                <label for="">Categorías de interés</label>
+            
+            <div>
+                <input type="email" name="Email" placeholder="Email" class="inputBox" required>
             </div>
 
-            <div class="genre-interest">
-                <div class="electro-i">
-                    <input type="checkbox" name="electro" id="electro-form">
-                    <label for="">Electro</label>
-                </div>
-
-                <div class="moda-i">
-                    <input type="checkbox" name="moda" id="moda-form">
-                    <label for="">Moda</label>
-                </div>
-
-                <div class="hogar-i">
-                    <input type="checkbox" name="hogar" id="hogar-form">
-                    <label for="">Hogar</label>
-                </div>
-
-                <div class="jugueteria-i">
-                    <input type="checkbox" name="jugueteria" id="jugueteria-form">
-                    <label for="">Juguetería</label>
-                </div>
-
-                <div class="vida-sana-i">
-                    <input type="checkbox" name="vida-sana" id="vida-sana-form">
-                    <label for="">Vida sana</label>
-                </div>
+            <div>
+                <input type="text" name="Nombre-de-usuario" placeholder=" Nombre de usuario" class="inputBox" required>
             </div>
-        </div>
 
-        <div class="user-image-form-box">
-            <label for="">Foto de usuario</label>
-            <input type="" id="user-image-form">
-        </div>
+            <div>
+                <div class="fechaNacimiento">
+                    <h4>
+                        Fecha de nacimiento
+                    </h4>
+                </div>
+                <input type="date" name="Fecha-de-nacimiento" class="input-fecha-nacimiento" max="2023-12-31" required>
+            </div>
 
-        <div class="password-form-box-register-section">
-            <input type="password" id="password-register-form" name="password-form-register" placeholder="Contraseña">
-        </div>
+            <div>
+                <input type="text" name="Domicilio" placeholder="Domicilio" class="inputBox" required>
+            </div>
 
-        <div class="confirm-password-form-box-register-section">
-            <input type="password" id="confirm-password" name="confirm-password-form-register" placeholder="Confirmar contraseña">
-        </div>
+            <div>
+                <label for="Pefil-de-usuario"></label>
+                <h4>
+                    Perfil de usuario
+                </h4>
+                <div class="categorias-perfil">
+                    <input type="radio" name="Pefil-de-usuario">
+                    Comprador
+                    <input type="radio" name="Pefil-de-usuario">
+                    Vendedor
+                </div>
 
-        <div class="submit-go-principal-page-form-box">
-            <form action="index.html">
-                <input type="submit" id="submit-form" name="submit-go-principal-form">
-            </form>
-        </div>
+            </div>
 
-        <div class="reset-form-box">
-            <input type="reset" id="reset-form" name="reset-form" placeholder="Borrar" value="Borrar todo">
-        </div>
-    </div>
-    </section>
-</form>
+            <div>
+                <label for="Categoria-de-interes">
 
+                    <div>
+                        <h4 class="div-categorias">
+                            Categorias de interes
+                        </h4>
 
-
-<!------------------------ INFORMACIÓN EXTRA DE LA PAGINA ------------------------>
-
-<footer>
-    <div class="basic-information">
-
-        <!-- Paga con tarjeta -->
-                        <div>
-                            <div class="card-icon-fa">
-                                <i class="fa-solid fa-credit-card"></i>
-                            </div>
-                        
-                            <div class="buy-cash-card">
-                                <h3 class="title-extra-info">Pagá con tarjeta o en efectivo</h3>
-                                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!<p>
-                            </div>
+                    <label>
+                        <div class="div-categorias-2">
+                            <input type="checkbox" name="Categoria-de-interes">
+                            Electro
                         </div>
-        
-        <!-- Envios -->
-                        <div>
-                            <div class="shipping-icon-fa">
-                                <i class="fa-solid fa-gift"></i>
-                            </div>
-        
-                            <div  class="free-shipping">
-                                <h3 class="title-extra-info">Envío gratis desde $ 2.500</h3>
-                                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-                            </div>
-                        </div>
-        
-        <!-- Seguridad -->
-                        <div>
-                            <div class="security-icon-fa">
-                                <i class="fa-solid fa-user-shield"></i>
-                            </div>
-                            
-                            <div  class="main-security">
-                                <h3 class="title-extra-info">Seguridad, de principio a fin</h3>
-                                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-                            </div>
-                        </div>
-                    </div>
-        
-        <!-- Copyright -->
-                    <div class="copyright-information">
-                        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-                    </div>
-        
+                    </label>
 
-</footer>
+                    <label>
+                        <div class="div-categorias-3">
+                            <input type="checkbox" name="Categoria-de-interes">
+                            Moda
+                        </div>
+                    </label>
+
+                    <label>
+                        <div class="div-categorias-3">
+                            <input type="checkbox" name="Categoria-de-interes">
+                            Hogar
+                        </div>
+                    </label>
+
+                    <label>
+                        <div class="div-categorias-3">
+                            <input type="checkbox" name="Categoria-de-interes">
+                            Jugueteria
+                        </div>
+                    </label>
+
+                    <label>
+
+                        <div class="div-categorias-3">
+                            <input type="checkbox" name="Categoria-de-interes">
+                            Vida sana
+                        </div>
+
+                    </label>
+
+                </label>
+
+                </div>
+
+
+            </div>
+
+            <div>
+                <div>
+                    <h4>
+                        Seleccione una foto de Perfil
+                    </h4>
+                </div>
+                <input type="file" name="fotoDePerfil" accept=".jpg, .png" required>
+            </div>
+
+            <div>
+                <input type="password" name="contraseña" minlength=6 placeholder="Contraseña" class="inputBox" required>
+            </div>
+
+            <div class="contraseña">
+                <input type="password" name="Confirmar contraseña" minlength=6 placeholder="Confirmar contraseña" class="inputBox" required>
+            </div>
+
+            <section>
+                <div class="boton-enviar">
+                    <button type="submit" class="input-enviar">Enviar</button>
+                </div>
+            </section>
+
+            <section>
+                <div class="boton-enviar">
+                    <button type="reset" class="input-enviar">Borrar</button>
+            </section>
+
+        </form>
+    </main>
+
+<!-- FOOTER -->
+
+    <footer>
+        <ul>
+            <li class="titulo-footer">
+                <div class="logo-footer">
+                    <i class="fa-solid fa-credit-card fa-xl"></i>
+                </div>
+                <section>Pagá con tarjeta o en efectivo</section>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </li>
+
+            <li class="titulo-footer">
+                <div class="logo-footer">
+                    <i class="fa-solid fa-gift fa-xl"></i>
+                </div>
+                <section>Envío gratis desde $ 2.500</section>
+                <p> Por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </li>
+
+            <li class="titulo-footer">
+                <div class="logo-footer">
+                    <i class="fa-solid fa-user-shield fa-xl"></i>
+                </div>
+                <section>Seguridad, de principio a fin</section>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+                </section>
+            </li>
+        </ul>
+        <div>
+            <section class="titulo-footer">Copyright © 1999-2023 Mercadoliebre S.R.L.</section>
+        </div>
+    </footer>
+
 </body>
-</html> 
+
+</html>
