--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,393 +1,113 @@
-/* ---------------------- MAIN ---------------------- */
-
-.general-form-div{
+.register {
     display: flex;
-    align-content: center;
-    justify-content: flex-end;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 20px;
-    padding-top: 30px;
-    border: none;
-    background-color: #ebebeb;
+    justify-content: center;
+    align-items: center;
+    background-color: #666;
+    padding-top: 0px;
 }
 
-#n-s-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#user-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#mail-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#bday-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-    padding-right: 10px;
-}
-
-#adress-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#password-register-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#confirm-password{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#submit-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#reset-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-.name-surname-form-box, .username-form-box, .email-form-box, .birthday-form-box, .adress-form-box, .preferences-form-box, .interest-user-form-box .user-image-form-box, .password-form-box-register-section, .confirm-password-form-box-register-section, .submit-go-principal-page-form-box, .reset-form-box{
-    padding: 15px 0;
-}
-
-.electro-i, .moda-i, .hogar-i, .jugueteria-i, .vida-sana-i{
-    padding: 15px 0;
-}
-
-.buy, .sell{
-    padding: 15px 0;
-}
-
-#buy-form, #sell-form{
+.inputBox {
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
     border-radius: 5px;
+    height: 40px;
+    border-color: transparent;
 }
 
-.birthday-msg, .preferences-msg, .interest-msg{
-    padding: 12px 0;
-    -webkit-text-stroke: #000000 0.5px;
+.register-form {
+    width: 40%;
+    text-align: left;
+    padding: 20px;
+    background-color: #ebebeb;
+    border-radius: 5px;
+    margin: 5px;
 }
 
-.buy-sell-form-modify{
+.fechaNacimiento {
+    margin-top: 50px;
+    margin-left: 0px;
+    text-align: left;
+}
+
+.input-fecha-nacimiento {
+    width: 50%;
+    text-align: left;
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 5px;
+    height: 40px;
+    border-color: transparent;
 }
 
-*{
-    font-family: 'Roboto', sans-serif;                                                               
-    margin: 0;                                                                                 
-    padding: 0;                                                             
-    box-sizing: border-box;}
-
-body{
-background-color: #ebebeb;}
-
-p{
-    font-size: 14px;}
-
-h3{
-    font-size: 24px;
-}
-
-a{
-    color: #000000;
-    -webkit-text-stroke: #000000 0.2px;
-}
-
-/* Header */
-
-header{
-    background-color: #EAC926;
-}
-
-main{
-    width: 90%;
-    margin: auto;
-}
-
-.logo{
-    height: auto;
-    width: 15%;
-}
-
-.burger-menu{
-    margin: auto;
-    text-align: center;
-    font-size: 1.5rem;
-}
-
-
-.fa-bars{
-    text-decoration: solid;
-    color: #ffff;
-    background-color: #1259c3;
-    border-radius: 10px;
-}
-
-ul a{
+main div{
+    margin-top: 50px;
+    margin-bottom: 10px;
     text-decoration: none;
 }
 
-.search-input, .search-button{
-    border: none;
-    padding: 0.5rem;
-    background-color: #ffff;
-    cursor: pointer;
-    border-radius: 0.6rem;
+.categorias-perfil {
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-top: 10px;
+    text-align: left;
 }
 
-.search-form{
-    background-color: #ffff;
-    border-radius: 0.6rem;
+.div-categorias {
+    margin-left: 0px;
+    margin-bottom: 0px;
+    text-align: left;
+}
+
+.div-categorias-2 {
+    margin-top: 10px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    text-align: left;
+}
+
+.div-categorias-3 {
+    margin-left: 0px;
+    margin-top: 1px;
+    margin-bottom: 0px;
+    text-align: left;
+}
+
+.contraseña {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.boton-enviar {
+    background-color: #1259c3;
     text-align: center;
-}
-
-.search-input{
-    outline: none;
-    width: 280px;
-    border-radius: 0.6rem;
-}
-
-.mensaje{
-    text-align: center;
-    margin: 0.6rem;
-}
-
-.header-logo{
     display: flex;
-    flex-wrap: wrap;    
-    padding: 0.6rem;  
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    height: 40px;
+    margin-top: 2px;
+    text-decoration: none;
+    width: 95%;
+    text-decoration: none;
 }
 
-.nav-bar li{
-    margin: 0 1rem;
-    margin: 1.5rem;
-    font-size: 1.8vh;
+.boton-enviar:hover {
+    background-color: #0022AA;
 }
 
-footer{
-    background-color: #ffff;
-    margin: 0.5rem; 
+.input-enviar {
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 16px;
+    width: 100%;
+    height: 40px;
 }
 
-.basic-information{
-    text-align: center;  
-    margin: 1.2rem;  
+section {
+    display: flex;
+    justify-content: center;
 }
-
-.card-icon-fa, .shipping-icon-fa, .security-icon-fa{
-    font-size: 32px;  
-    margin-bottom: 0.6rem; 
-    color: #1259c3; 
-    padding-top: 50px;
-}
-
-.buy-cash-card, .free-shipping, .main-security, .copyright-information{
-    color: #666;   
-    padding: 1rem;
-    text-align: center;
-    font-weight: 900;
-}
-
-.title-extra-info{
-    -webkit-text-stroke: #000000 0.1px;
-}
-
-.copyright-information{
-    padding-top: 90px;
-}
-
-/* ---------------------- MEDIA QUERY ( mobile ) ---------------------- */
-
-@media (min-width: 361px) and (max-width: 768px){
-    /* -------- HEADER -------- */
-        .banner, .banner img{
-            width: 100%;
-        }
-    
-        .nav-bar{
-            display: none;
-        }
-    
-        .fa-bars{
-            margin-bottom: 10px;
-        }
-    
-        .nav-bar-inicio{
-            display: none;
-        }
-    
-        .header-log-bar{
-            flex-direction: column;
-        }
-    
-        .search-input, .search-button{
-            border: none;                                                           
-            padding: 0.5rem;
-            background-color: #ffff;
-            border-radius: 0.6rem;
-        }
-        
-        .search-form{
-            background-color: #ffff;
-            margin: 0 10px;
-            text-align: center;
-            width: 325px;
-        }
-        
-        .search-input{
-            outline: none;
-            width: 280px;
-        }   
-        
-    /* -------- MAIN -------- */
-        .productos
-    {
-            box-shadow: 0px 0px 8px rgb(100, 100, 100);
-            margin: 20px;
-            text-align: center;
-        }
-    
-        .descripcion{
-            display: none;
-        }
-    
-        .precio-descuento{
-            display: flex;
-            justify-content: space-between;
-        }
-    
-        .pov-msg, .offerts-msg{
-            text-align: center;
-            margin: 10px;
-        }
-    
-    /* -------- FOOTER -------- */
-        .title-extra-info{
-            margin-bottom: 12px;
-        }
-    
-}
-
-
-
-/* ---------------------- MEDIA QUERY ( tablet ) ---------------------- */
-
-@media (min-width: 769px){
-    /* -------- HEADER -------- */
-        .banner, .banner img{
-            width: 100%;
-        }
-    
-        .burger-menu{
-            display: none;
-        }
-    
-        .nav-bar{
-            display: flex;
-            justify-content: space-between;
-        }
-    
-        .nav-bar-menu{
-            display: flex;
-            justify-content: flex-end;
-        }
-    
-        .interaction-nav-client{
-            display: flex;
-        }
-    
-    /* -------- MAIN -------- */
-        .productos
-    {
-            box-shadow: 0px 0px 8px rgb(100, 100, 100);
-            margin: 20px;
-            text-align: center;
-        }
-    
-        .pov-msg, .seccion-oferta{
-            text-align: center;
-            margin: 2rem;
-        }
-    
-        .precio-descuento{
-            display: flex;
-            justify-content: space-between;
-        }
-    
-    /* -------- FOOTER -------- */
-        .basic-information{
-            display: flex;
-            padding: 20px 0 20px 0;
-        }
-    
-        .title-extra-info{
-            padding-bottom: 15px;
-        }
-    }
