--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,315 +1,393 @@
-*{
-    font-family: 'Roboto', sans-serif;                                                               
-    margin: 0;                                                                                 
-    padding: 0;                                                             
-    box-sizing: border-box;}
+/* Universales */
 
-body{
-background-color: #ebebeb;}
-
-p{
-    font-size: 14px;}
-
-h3{
-    font-size: 24px;
-}
-
-a{
-    color: #000000;
-    -webkit-text-stroke: #000000 0.2px;
-}
-
-/* Header */
-
-header{
+html {
+    font-family: 'Roboto', sans-serif;
     background-color: #EAC926;
 }
 
-main{
-    width: 90%;
-    margin: auto;
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
 
-.logo{
+body {
+    background-color: #EAC926;
+}
+
+/* HEADER */
+
+header {
+    /* position: fixed; */
+    background-color: #EAC926;
+    width: 100%;
     height: auto;
-    width: 15%;
-}
-
-.burger-menu{
     margin: auto;
-    text-align: center;
-    font-size: 1.5rem;
 }
 
-
-.fa-bars{
-    text-decoration: solid;
-    color: #ffff;
-    background-color: #1259c3;
-    border-radius: 10px;
-}
-
-ul a{
-    text-decoration: none;
-}
-
-.search-input, .search-button{
-    border: none;
-    padding: 0.5rem;
-    background-color: #ffff;
-    cursor: pointer;
-    border-radius: 0.6rem;
-}
-
-.search-form{
-    background-color: #ffff;
-    border-radius: 0.6rem;
-    text-align: center;
-}
-
-.search-input{
-    outline: none;
-    width: 280px;
-    border-radius: 0.6rem;
-}
-
-.mensaje{
-    text-align: center;
-    margin: 0.6rem;
-}
-
-.header-logo{
+.top-nav {
     display: flex;
-    flex-wrap: wrap;    
-    padding: 0.6rem;  
     justify-content: space-between;
-}
-
-.nav-bar li{
-    margin: 0 1rem;
-    margin: 1.5rem;
-    font-size: 1.8vh;
-}
-
-                                                        /* Main */
-
-.productos img{                                                           
-    width: 15rem; 
-    height: 15rem;
     margin: 10px;
 }
 
-.precio{
-    font-size: 2.5vh;
+.top-nav ul {
+    display: flex;
+    margin: 5px;
+    padding: 0px;
+    list-style-type: none;
 }
 
-.descuento{
-    font-size: 2.5vh; 
-    color: #39b54a;  
-    padding-bottom: 0.6rem;
+.top-nav li {
+    margin: 5px;
 }
 
-.descripcion{
-    font-size: 16px; 
-    text-align: start;
+.header-principal {
+    margin: 35px;
 }
 
-
-.articulo{
-    border-top: 1px solid #ebebeb;
-    padding: 0 20px 20px 20px;
-}
-
-.productos{
+.header-compra {
+    font-size: 15px;
+    width: 25%;
     text-align: center;
-    margin: 0 0.5rem; 
-    width: 250px;
-    background-color: #ffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-page {
+    display: flex;
+    justify-content: space-between;
 }
 
 
-.fa-truck{
+/* MAIN */
+
+main img {
+    width: 50%;
+    height: auto;
+}
+
+main {
+    width: 100%;
+    padding: 20px;
+    background-color: #ebebeb;
+}
+
+.cuerpos-texto {
+    font-size: 12px;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: white;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    padding: 30px;
+}
+
+footer ul {
+    padding: 1px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+
+    .logo-footer {
+        color: #1259c3;
+        transition: all 500ms;
+    }
+
+    .logo-footer:hover{color: #666;
+    }
+}
+
+footer li {
+    list-style-type: none;
+    margin: 1px;
+}
+
+.titulo-footer {
+    font-weight: bold;
+    margin: 20px;
+}
+/* ETIQUETAS */
+
+/* .section-main {
+    background-color: #ebebeb;
+    width: 48%;
+    background-size: cover;
+    text-align: center;
+    padding: 10px;
+    border-top:#ebebeb 2px solid;
+    margin: 5px;
+} */
+
+.publicidad {
+    /* margin-top: 220px; */
+    width: 100%;
+    box-shadow: 0px 0px 5px rgb(100, 100, 100)
+}
+
+.burger {
+    text-align: center;
+    margin: 20px;
+}
+
+.material-symbols-outlined {
+    background-color: #1259c3;
+    color: white;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.precios {
+    font-size: 18px;
+    margin-left: 5px;
+}
+
+.descuento {
+    font-size: 16px;
     color: #39b54a;
+    padding-left: 10%;
 }
 
-.icon-truck{
-    display: block;
-    padding: 0.3rem;
-    width: 1.9rem;
-    height: 1.9rem;
-    border: 1px solid #39b54a;
-    background-color: #ffff;
-    border-radius: 50%; 
+.descripcion {
+    font-size: 16px;
+    color: white;
+    transition: all 500ms;
+    margin-top: 20px;
+    text-align: left;
+    margin-left: 5px;
+}
+
+.titulares {
+    font-size: 24px;
+    text-align: left;
+}
+
+.logo-mercado-liebre {
+    width: 20%;
+}
+
+.logo-envio {
     position: relative;
-    left: 185px;
-    bottom: 15px;
+    left: 70%;
+    top: 27px;
+    display: flex;
+    width: 30px;
+    height: 30px;
+    text-align: right;
+    color: #39b54a;;
+    border: solid 1.5px #39b55a;
+    border-radius: 50px;
+    padding: 5px;
+    margin: 10px;
+    transition: all 1000ms;
 }
 
-.titulo {
+.section-main:hover{
+    .logo-envio{ transform: rotate(-90deg);}
+}
+
+.contenedor {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 30px;
 }
 
-                                                    /* Footer */
-
-footer{
-    background-color: #ffff;
-    margin: 0.5rem; 
-}
-
-.basic-information{
-    text-align: center;  
-    margin: 1.2rem;  
-}
-
-.card-icon-fa, .shipping-icon-fa, .security-icon-fa{
-    font-size: 32px;  
-    margin-bottom: 0.6rem; 
-    color: #1259c3; 
-    padding-top: 50px;
-}
-
-.buy-cash-card, .free-shipping, .main-security, .copyright-information{
-    color: #666;   
-    padding: 1rem;
+.barra-tareas {
+    width: 50%;
     text-align: center;
-    font-weight: 900;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.title-extra-info{
-    -webkit-text-stroke: #000000 0.1px;
+.input {
+    border-radius: 5px;
+    height: 30px;
+    width: 500px;
+    margin: 5px;
+    border-color: transparent;
 }
 
-.copyright-information{
-    padding-top: 90px;
+.boton-busqueda {
+    border-radius: 5px;
+    height: 30px;
+    width: 30px;
+    border-color: transparent;
+    background-color: white;
 }
 
-/* ---------------------- MEDIA QUERY ( mobile ) ---------------------- */
-
-@media (min-width: 361px) and (max-width: 768px){
-    /* -------- HEADER -------- */
-        .banner, .banner img{
-            width: 100%;
-        }
-    
-        .nav-bar{
-            display: none;
-        }
-    
-        .fa-bars{
-            margin-bottom: 10px;
-        }
-    
-        .nav-bar-inicio{
-            display: none;
-        }
-    
-        .header-log-bar{
-            flex-direction: column;
-        }
-    
-        .search-input, .search-button{
-            border: none;                                                           
-            padding: 0.5rem;
-            background-color: #ffff;
-            border-radius: 0.6rem;
-        }
-        
-        .search-form{
-            background-color: #ffff;
-            margin: 0 10px;
-            text-align: center;
-            width: 325px;
-        }
-        
-        .search-input{
-            outline: none;
-            width: 280px;
-        }   
-        
-    /* -------- MAIN -------- */
-        .productos
-    {
-            box-shadow: 0px 0px 8px rgb(100, 100, 100);
-            margin: 20px;
-            text-align: center;
-        }
-    
-        .descripcion{
-            display: none;
-        }
-    
-        .precio-descuento{
-            display: flex;
-            justify-content: space-between;
-        }
-    
-        .pov-msg, .offerts-msg{
-            text-align: center;
-            margin: 10px;
-        }
-    
-    /* -------- FOOTER -------- */
-        .title-extra-info{
-            margin-bottom: 12px;
-        }
-    
+.div-publicidad {
+    background-color: #ebebeb;
 }
 
+.decoration-links {
+    text-decoration: none;
+}
 
+.borde-decorativo{
+    border-top: #ebebeb 2px solid;
+    margin-bottom: 20px;
+}
 
-/* ---------------------- MEDIA QUERY ( tablet ) ---------------------- */
+.decoracion-textos {
+    display: flex;
+}
 
-@media (min-width: 769px){
-    /* -------- HEADER -------- */
-        .banner, .banner img{
-            width: 100%;
-        }
-    
-        .burger-menu{
-            display: none;
-        }
-    
-        .nav-bar{
-            display: flex;
-            justify-content: space-between;
-        }
-    
-        .nav-bar-menu{
-            display: flex;
-            justify-content: flex-end;
-        }
-    
-        .interaction-nav-client{
-            display: flex;
-        }
-    
-    /* -------- MAIN -------- */
-        .productos
-    {
-            box-shadow: 0px 0px 8px rgb(100, 100, 100);
-            margin: 20px;
-            text-align: center;
-        }
-    
-        .pov-msg, .seccion-oferta{
-            text-align: center;
-            margin: 2rem;
-        }
-    
-        .precio-descuento{
-            display: flex;
-            justify-content: space-between;
-        }
-    
-    /* -------- FOOTER -------- */
-        .basic-information{
-            display: flex;
-            padding: 20px 0 20px 0;
-        }
-    
-        .title-extra-info{
-            padding-bottom: 15px;
-        }
+/*--- MEDIAS QUERIES ---*/
+
+/* Moviles */
+@media (max-width: 425px) {
+    .section-main {
+        background-color: white;
+        text-align: center;
+        margin: 5px;
+        width: 100%;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
+
+    .contenedor {
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        padding: 10px;
+        margin: 2px;
+    }
+
+
+    header {
+        display: block;
+        justify-content: space-between;
+    }
+
+    header ul {
+        display: none;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .top-nav {
+        display: none;
+    }
+
+    .logo-mercado-liebre {
+        width: 100%;
+    }
+
+    .header-compra {
+        display: none;
+    }
+
+    .barra-tareas {
+        width: 20%;
+        text-align: center;
+        display: none;
+        align-items: center;
+        justify-content: center;
+    }
+
+    footer ul {
+        padding: 1px;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+}
+
+/* tablets */
+@media (min-width: 425px) and (max-width: 768px) {
+
+    .contenedor {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+        margin: 2px;
+    }
+
+    .section-main {
+        background-color: white;
+        text-align: center;
+        margin: 5px;
+        width: 45%;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+    header {
+        display: block;
+        justify-content: space-between;
+    }
+
+    header ul {
+        display: none;
+    }
+
+    .top-nav {
+        display: none;
+    }
+
+    .logo-mercado-liebre {
+        width: 30%;
+    }
+
+    .header-compra {
+        display: none;
+    }
+
+    .barra-tareas {
+        width: 50%;
+        margin: 20px;
+    }
+
+    footer ul {
+        padding: 1px;
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+}
+
+/* Desktop */
+@media (min-width: 768px) {
+
+    .contenedor {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .section-main {
+        background-color: white;
+        width: 48%;
+        background-size: cover;
+        text-align: center;
+/*         border-top: #ebebeb 2px solid; */
+        margin: 10px;
+        transition: all 500ms;
+    }
+
+    .burger {
+        display: none;
+    }
+
+    .material-symbols-outlined {
+        display: none;
+    }
+
+    .section-main:hover {
+        .descripcion{color: #666};
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+}
